fix broken style on shoppoing cart form

--- a/app/components/ShoppingCartForm/styles.less
+++ b/app/components/ShoppingCartForm/styles.less
@@ -1,5 +1,4 @@
 .form-shopping-cart {
-  padding-top: 12px;
 
   .order-summery {
     .head {
